// Copyright 2025 Velda Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package velda;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "velda.io/velda/pkg/proto";

message AccessCodeLoginRequest {
  string access_code = 1;
  string state = 2;
}

message LoginResponse {
  string access_token = 1;
  google.protobuf.Timestamp access_token_expires_at = 2;
  string refresh_token = 3;
  google.protobuf.Timestamp refresh_token_expires_at = 4;
  string email = 5;
}

message IssueTokenRequest {
  string refresh_token = 1;
}

message RevokeTokenRequest {
  string token = 1;
}

service AuthService {
  rpc AccessCodeLogin(AccessCodeLoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post : "/rest/auth/accesscodelogin"
      body : "*"
    };
  };

  rpc IssueToken(IssueTokenRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post : "/rest/auth/issuetoken"
      body : "*"
    };
  };

  rpc RevokeToken(RevokeTokenRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post : "/rest/auth/revoke"
      body : "*"
    };
  };

}
